--- a/src/styles.css
+++ b/src/styles.css
@@ -1,26 +1,39 @@
 @import url("https://fonts.googleapis.com/css?family=Ubuntu:300,400,700");
-.wtWrap {
-  border: 1px solid red;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+.appWrap {
   width: 100%;
   height: 100%;
-  font-family: "Ubuntu";
-  font-weight: 300;
+  background-image: url("../art/wt_layout_guide.png");
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.wtWrap {
+  /* border: 1px solid red; */
+  width: 90%;
+  height: 95%;
+  display: flex;
+  flex-direction: column;
 }
 .wtTitle {
-  border: 1px solid blue;
+  flex: 1 1 auto;
+  min-height: 15%;
+  border: 1px solid yellow;
 }
 .wtInput {
+  flex: 1 1 auto;
   display: flex;
-  border: 1px solid green;
+  min-height: 16.5%;
+  border: 1px solid red;
 }
 .wtData {
-  flex: 1;
-  border: 1px solid black;
+  flex: 4 1 auto;
+  border: 1px solid green;
   overflow: auto;
 }
 .wtFooter {
   border: 1px solid purple;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
