--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@
   flex-direction: column;
   align-items: center;
   color: #242948;
-  font-family: "SF UI Text";
+  font-family: -apple-system, "SF UI Text";
   letter-spacing: -0.05em;
   font-weight: 200;
   font-size: 18px;
@@ -61,13 +61,13 @@
   justify-content: center;
 }
 .wtTitleDate {
-  font-family: "SF UI Display";
+  font-family: -apple-system, "SF UI Display";
   letter-spacing: 0;
   font-weight: 900;
   font-size: 26px;
 }
 .wtTitleTime {
-  margin-top: 5px;
+  margin-top: 0px;
   font-size: 19px;
 }
 .wtInputRow {
@@ -107,6 +107,8 @@
   border-color: #7f98a3;
   color: white;
   font-size: 40px;
+  margin: 0;
+  padding: 0;
 }
 .wtInputItem {
   margin-right: 20px;
@@ -194,7 +196,7 @@
   font-size: 16px;
 }
 .wtRowDateDate {
-  font-family: "SF UI Display";
+  font-family: -apple-system, "SF UI Display";
   letter-spacing: 0;
   font-weight: 500;
   text-align: center;
@@ -242,6 +244,7 @@
   font-size: 13px;
   color: #bababa;
   letter-spacing: 0;
+  padding-left: 2px;
 }
 .noData.data {
   margin-bottom: -3px;
